--- a/config/database.yml
+++ b/config/database.yml
@@ -4,16 +4,17 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: postgresql
-  pool: 5
-  username:username
-  password:password
-  host: <%=ENV['IP'] %>
+  default: &default
+      adapter: postgresql
+      encoding: unicode
+      pool: 5
+      username: username
+      password: password
+      host:     <%= ENV['IP'] %>
 
 development:
   <<: *default
-  database: galkot_development
+  database: galkot_development  
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -24,4 +25,4 @@ test:
 
 production:
   <<: *default
-  database: galkot_production
+  database:galkot_production
